change pdf download  z-index to 8 to avoiding showing with show page

--- a/app/assets/stylesheets/my-style.css
+++ b/app/assets/stylesheets/my-style.css
@@ -279,7 +279,7 @@ ul {
   position: relative;
   bottom: 1072px;
   right: 16px;
-  z-index: 9;
+  z-index: 8;
   background-color: #FFF;
   color: #4f4f4f;
   padding: 8px;
